--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,19 +14,22 @@
         <a class="btn btn-ghost text-xl">Dashboard</a>
     </div>
     <div class="flex-none">
-        <ul class="menu menu-horizontal px-1">
-            <li>
-                <details>
-                    <summary>
-                        Theme
-                    </summary>
-                    <ul class="p-2 bg-neutral rounded-t-none">
-                        <li><a @click.prevent="document.documentElement.setAttribute('data-theme', 'light')">Light</a></li>
-                        <li><a @click.prevent="document.documentElement.setAttribute('data-theme', 'dark')">Dark</a></li>
-                    </ul>
-                </details>
-            </li>
-        </ul>
+        <label class="swap swap-rotate btn btn-ghost btn-circle tooltip tooltip-bottom" data-tip="Toggle Theme"
+               x-data="{ theme: document.documentElement.getAttribute('data-theme') || 'light' }"
+               :class="{ 'swap-active': theme === 'dark' }"
+               @click="theme = (theme === 'light' ? 'dark' : 'light'); document.documentElement.setAttribute('data-theme', theme)">
+
+            <!-- moon icon -->
+            <svg class="swap-on w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
+            </svg>
+
+            <!-- sun icon -->
+            <svg class="swap-off w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
+            </svg>
+
+        </label>
     </div>
 </div>
 
